<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_edit_profile"
        android:title="Edit Profile"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:title="Log Out"
        app:showAsAction="never" />
</menu>